fix grid visibility

--- a/web/powergrid.css
+++ b/web/powergrid.css
@@ -7,6 +7,7 @@
     position: relative;
     top: 0;
     bottom: 0;
+    height: 100%;
 }
 
 .powergrid,
